--- a/Code/HTML/dashboard.html
+++ b/Code/HTML/dashboard.html
@@ -29,19 +29,19 @@
         <i class="fa-solid fa-building-columns"></i>&nbsp;RV College of Engineering
       </div>
       <div class="list-group list-group-flush my-3">
-        <a href="../pages/dashboard.html"
+        <a href="/HTML/dashboard.html"
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold active"><i
             class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
 
-        <a href="../pages/semesterRegistration.html"
+        <a href="/HTML/semesterRegistration.html"
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
             class="fas fa-brands fa-wpforms me-2"></i>Registration</a>
 
-        <a href="../pages/noticeBoard.html"
+        <a href="/HTML/noticeBoard.html"
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
             class="fas fa-solid fa-scroll me-2"></i>Notice Board</a>
 
-        <a href="../pages/teacherFeedback.html"
+        <a href="/HTML/teacherFeedback.html"
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
             class="fas fa-solid fa-comment me-2"></i>Teacher Feedback</a>
 
@@ -49,7 +49,7 @@
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
             class="fas fa-solid fa-address-card me-2"></i>About Us</a>
 
-        <a href="../pages/signin.html"
+        <a href="/HTML/signin.html"
           class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
             class="fas fa-power-off me-2"></i>Logout</a>
       </div>
