--- a/Code/HTML/dashboard.html
+++ b/Code/HTML/dashboard.html
@@ -33,11 +33,11 @@
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold active"><i
             class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
 
-        <a href="/HTML/semesterRegistration.html"
+        <a href="/HTML/Registration.html"
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
             class="fas fa-brands fa-wpforms me-2"></i>Registration</a>
 
-        <a href="/HTML/noticeBoard.html"
+        <a href="/HTML/noticeboard.html"
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
             class="fas fa-solid fa-scroll me-2"></i>Notice Board</a>
 
@@ -49,7 +49,7 @@
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
             class="fas fa-solid fa-address-card me-2"></i>About Us</a>
 
-        <a href="/HTML/signin.html"
+        <a href="/HTML/Signin.html"
           class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
             class="fas fa-power-off me-2"></i>Logout</a>
       </div>
