--- a/Code/HTML/teacherFeedback.html
+++ b/Code/HTML/teacherFeedback.html
@@ -30,8 +30,8 @@
 
   if(! $result2){
     // echo "Couldn't insert the feedback!";
-    include "../pages/teacherFeedback.html";    
+    include "/Code/HTML/teacherFeedback.html";    
   }else{
-    include "../pages/dashboard.html";
+    include "/Code/HTML/dashboard.html";
   }
 ?>
