--- a/Code/HTML/Signin.html
+++ b/Code/HTML/Signin.html
@@ -15,8 +15,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="../styles/all.css" />
-  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="/Code/CSS/all.css" />
+  <link rel="stylesheet" href="/Code/CSS/style.css" />
 </head>
 
 <body class="light-coloring">
@@ -25,10 +25,10 @@
       <div class="card my-auto shadow p-0">
         <ul class="nav nav-pills nav-fill pb-4">
           <li class="nav-item">
-            <a class="nav-link active coloring" href="../pages/signin.html">Sign in</a>
+            <a class="nav-link active coloring" href="/Code/HTML/Signin.html">Sign in</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link coloring2" href="../pages/signup.html">Sign up</a>
+            <a class="nav-link coloring2" href="/Code/HTML/Signup.html">Sign up</a>
           </li>
         </ul>
 
