--- a/Code/HTML/aboutUs.html
+++ b/Code/HTML/aboutUs.html
@@ -14,8 +14,8 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
     rel="stylesheet" />
 
-  <link rel="stylesheet" href="../styles/all.css" />
-  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="/Code/CSS/all.css" />
+  <link rel="stylesheet" href="/Code/CSS/style.css" />
   <title>About Us</title>
 </head>
 
@@ -27,27 +27,27 @@
         <i class="fa-solid fa-building-columns"></i>&nbsp;RV College of Engineering
       </div>
       <div class="list-group list-group-flush my-3">
-        <a href="../pages/dashboard.html"
+        <a href="/Code/HTML/dashboard.html"
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
             class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
 
-        <a href="../pages/semesterRegistration.html"
+        <a href="/Code/HTML/Registration.html"
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
             class="fas fa-brands fa-wpforms me-2"></i>Registration</a>
 
-        <a href="../pages/noticeBoard.html"
+        <a href="/Code/HTML/noticeboard.html"
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
             class="fas fa-solid fa-scroll me-2"></i>Notice Board</a>
 
-        <a href="../pages/teacherFeedback.html"
+        <a href="/Code/HTML/teacherFeedback.html"
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
             class="fas fa-solid fa-comment me-2"></i>Teacher Feedback</a>
 
-        <a href="../pages/aboutUs.html"
+        <a href="/Code/HTML/aboutUs.html"
           class="list-group-item list-group-item-action bg-transparent second-text fw-bold active"><i
             class="fas fa-solid fa-address-card me-2"></i>About Us</a>
 
-        <a href="../pages/signin.html"
+        <a href="/Code/HTML/Signin.html"
           class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
             class="fas fa-power-off me-2"></i>Logout</a>
       </div>
